--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cloud_firestore: ^4.14.0
   firebase_storage: ^11.6.0
   file_picker: ^7.0.2
+  video_player: ^2.7.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
