--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_storage: ^11.6.0
   file_picker: ^7.0.2
   video_player: ^2.7.2
+  agora_rtc_engine: ^6.3.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
